--- a/MRI_brain_v4_CONV2D_3channels_169.ipynb
+++ b/MRI_brain_v4_CONV2D_3channels_169.ipynb
@@ -241,7 +241,7 @@
     "id": "QLD5SYRAhZVB"
    },
    "source": [
-    "### Making the dataset generator "
+    "### Processing the data"
    ]
   },
   {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -464,74 +464,10 @@
     "id": "5Fk_YX0JZmrt",
     "outputId": "493cb362-a750-48de-a37d-be14ed8abc0f"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "A:\\anaconda3\\envs\\tf\\lib\\site-packages\\sklearn\\utils\\validation.py:70: FutureWarning: Pass classes=[0 1], y=[1 1 1 1 0 1 1 0 1 1 1 1 1 1 1 0 0 1 0 1 0 1 1 1 0 0 1 0 0 1 0 0 0 1 0 1 0\n",
-      " 1 0 1 0 0 1 1 1 1 1 0 0 1 0 0 1 1 0 0 0 0 0 1 0 0 0 1 1 0 0 1 1 1 0 0 0 1\n",
-      " 0 0 0 0 0 0 1 0 0 1 1 0 1 0 0 1 1 1 0 1 1 0 0 0 0 1 1 1 1 0 0 1 1 1 0 0 1\n",
-      " 1 0 1 0 1 0 0 0 0 0 0 0 1 0 1 1 0 0 1 0 1 1 1 1 0 1 1 1 0 0 1 1 0 0 1 0 1\n",
-      " 0 1 0 1 0 1 1 1 1 0 0 1 1 0 0 1 0 1 0 1 1 1 0 1 0 1 0 0 1 0 0 0 1 0 1 0 0\n",
-      " 1 1 0 1 1 1 1 0 1 1 0 1 1 1 1 0 1 1 1 1 0 1 0 0 1 1 1 1 1 0 0 1 0 1 1 1 1\n",
-      " 1 1 0 0 0 1 1 1 0 1 0 0 0 1 0 1 1 1 1 1 1 0 0 1 0 1 0 0 0 1 1 1 1 1 0 0 0\n",
-      " 1 1 0 1 0 1 0 1 1 1 1 0 0 1 1 0 0 0 0 1 1 0 1 1 0 0 1 0 0 0 1 0 1 1 0 1 1\n",
-      " 1 0 0 1 0 1 1 0 1 1 1 1 1 0 1 1 1 0 1 0 1 1 1 0 0 0 1 1 1 0 0 0 1 1 0 1 1\n",
-      " 0 1 1 1 1 0 1 0 1 1 0 1 1 0 1 1 1 0 1 0 1 1 0 1 1 0 1 1 0 0 1 0 0 1 0 1 1\n",
-      " 0 1 1 1 0 0 1 1 0 0 1 1 0 0 1 0 1 1 1 1 0 0 0 0 0 1 1 1 0 1 0 0 1 0 0 1 1\n",
-      " 0 1 1 0 0 0 1 0 1 1 1 1 0 1 1 1 0 0 0 0 0 1 1 0 1 0 1 0 1 0 1 1 1 0 0 1 1\n",
-      " 1 1 0 0 1 1 1 1] as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
-      "  FutureWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([1.11881188, 0.904     ])"
-      ]
-     },
-     "execution_count": 190,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.utils import class_weight\n",
-    "weights = class_weight.compute_class_weight('balanced', np.unique(y_train), y_train)\n",
-    "# weights = {i : weight[i] for i in range(2)}\n",
-    "weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
-   "metadata": {
-    "id": "4nAwa_lQAM4I"
-   },
-   "outputs": [],
-   "source": [
-    "# y_train = np.array(y_train).reshape(-1, 1)\n",
-    "# y_test = np.array(y_test).reshape(-1, 1)\n",
-    "\n",
-    "# y_train.shape, y_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 192,
-   "metadata": {
-    "id": "AVflavVYhZVC"
-   },
-   "outputs": [],
-   "source": [
-    "# # making a list out of the files that are in the EXCEL file\n",
-    "# filenames = []\n",
-    "# for filename in os.listdir(img_directory):\n",
-    "#     if filename not in not_included:\n",
-    "#         filenames.append(filename)\n",
-    "        \n",
-    "# len(filenames), len(not_included)"
+    "weights = class_weight.compute_class_weight('balanced', np.unique(y_train), y_train)"
    ]
   },
   {
@@ -1193,7 +1129,9 @@
   {
    "cell_type": "code",
    "execution_count": 319,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
